--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "fcm-node": "^1.2.1",
     "jade": "~1.11.0",
     "jsonwebtoken": "^8.3.0",
+    "moment": "^2.22.2",
     "mongoose": "^5.1.5",
     "morgan": "~1.9.0",
     "node-schedule": "^1.3.0",
