--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "morgan": "~1.9.0",
     "node-schedule": "^1.3.0",
     "nodemailer": "^4.6.6",
-    "serve-favicon": "~2.4.5"
+    "serve-favicon": "~2.4.5",
+    "wait.for": "^0.6.6"
   }
 }
